plugins {
    id 'java-library'
}

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    jcenter()
    mavenCentral()
    maven {
        name 'Spigot'
        url 'https://hub.spigotmc.org/nexus/content/groups/public/'
    }

    maven {
        name 'Sonatype'
        url 'https://oss.sonatype.org/content/groups/public'
    }

    maven {
        name 'sk89q'
        url "http://maven.sk89q.com/repo/"
    }
    maven {
        name 'NyaaCore'
        url 'https://raw.githubusercontent.com/NyaaCat/NyaaCore/maven-repo'
    }

    maven {
        name 'nu-langchecker'
        url 'https://raw.githubusercontent.com/Librazy/NyaaUtilsLangChecker/maven-repo'
    }
}

dependencies {
    implementation 'org.spigotmc:spigot-api:1.12-R0.1-SNAPSHOT'
    implementation 'com.sk89q.worldguard:worldguard-legacy:6.2'
    implementation 'com.sk89q.worldedit:worldedit-core:6.1'
    implementation('cat.nyaa:nyaacore:3.0-SNAPSHOT') {
        transitive = false
    }
    compileOnly 'org.librazy:NyaaUtilsLangChecker:1.0-SNAPSHOT'
}

String nyaaCoreLangDir = System.getenv("NYAACORE_LANG_DIR")

compileJava {
    options.compilerArgs += ["-Xplugin:NyaaUtilsLangAnnotationProcessor", "-Xlint:all"]
    if (nyaaCoreLangDir != null) {
        options.compilerArgs += ["-ALANG_DIR_ADDITIONAL_PATH=" + nyaaCoreLangDir]
    }
}